--- a/overseas/index_sale.html
+++ b/overseas/index_sale.html
@@ -659,7 +659,7 @@
                 {
                     "name": "Sport Heart Rate Monitor Digital Watch",
                     "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_674841.html",
-                    "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
+                    "nameRussian": "Цифровые часы с монитором сердечной частоты",
                     "img": "tmp/goods2-1.jpg",
                     "price": "9.9",
                     "oldPrice": "25.00",
@@ -668,7 +668,7 @@
                 {
                     "name": "Military Electronic Men Quartz Watch",
                     "link": "http://en.jd.com/product/SKMEI-Brand-Watches-Men-Resin-Strap-Digital-Army-Military-Sport-Watch_669145.html",
-                    "nameRussian": "Армейские электронные мужские кварц часы",
+                    "nameRussian": "Электронные мужские кварц часы.",
                     "img": "tmp/goods2-2.jpg",
                     "price": "9.9",
                     "oldPrice": "22.00",
@@ -686,7 +686,7 @@
                 {
                     "name": "Analog Digital 3ATM Full Steel Quartz Watches",
                     "link": "http://en.jd.com/product/SKMEI-Luxurious-Watches-Men-Fashion-Analog-Digital-Wristwatch-3ATM-Stainless-Military-Sports-Watch_670642.html",
-                    "nameRussian": "Армейские электронные мужские кварц часы",
+                    "nameRussian": "Цифровые мужские кварц часы.",
                     "img": "tmp/goods2-4.jpg",
                     "price": "9.9",
                     "oldPrice": "30.00",
@@ -704,7 +704,7 @@
                 {
                     "name": "Waterproof Big Dial Men Quartz watch",
                     "link": "http://en.jd.com/product/SKMEI-Fashion-Black-Stainless-Full-Steel-Strap-Relogio-Male-Clock-Men-Wristwatch-Waterproof-Quartz-Sport-Watch_669107.html",
-                    "nameRussian": "Водонепроницаемые мужские кварц часы",
+                    "nameRussian": "Солнечные цифровые часы со светодиодами.",
                     "img": "tmp/goods2-6.jpg",
                     "price": "9.9",
                     "oldPrice": "20.00",
@@ -994,8 +994,8 @@
     $(function(){
 
         var hdTitle = [
-            'Yumi-Наш бизнес был начат более чем 18 лет назад, основатели которого Uttam and Clare Nepal. В 1994 году они начали продавать трикотажные изделия из Непала в Лондоне. В то модное время, этническая и ручная работа их коллекции сделала их очень популярными до конца 90х и брэнд быстро развивался. Компания заслужила себе репутацию благодаря живым краскам, принтам и акценту на мелкие детали, что быстро сделало ее узнаваемым во всем Мире как брэнд женской, детской одежды и аксессуаров.',
-            'SKME--живи лучшей жизнью.<br>С 7 августа 2010 года, SKMEI основной акцент поставил на спорт и креативность в часах.SKMEI непрерывно развивает новую технологию и переносит все ее достижения на дизайн уникальных часов. Наша цель это создание яркого образа красивых часов в сочетание с лучшим опытом и инновационными характеристиками. SKMEI включает  4 вида часов: модные часы, силиконовые часы, стальные часы и алмазные часы. ',
+            'Yumi-Наш бизнес был начат более чем 18 лет назад, основатели которого Uttam and Clare Nepal. В 1994 году они начали продавать трикотажные изделия из Непала в Лондон. В то модное время, этническая и ручная работа их коллекции сделала их очень популярными до конца 90х и брэнд быстро развивался. Компания заслужила себе репутацию благодаря живым краскам, принтам и акценту на мелкие детали, что быстро сделало ее узнаваемым во всем Мире как брэнд женской, детской одежды и аксессуаров.',
+            'SKME--живи лучшей жизнью.<br>С 7 августа 2010 года, SKMEI основной акцент поставил на спорт и креативность в часах.SKMEI непрерывно развивает новую технологию и переносит все ее достижения на дизайн уникальных часов. Наша цель это создание яркого образа красивых часов в сочетание с лучшим опытом и инновационными характеристиками. SKMEI включает  4 вида часов: модные часы, силиконовые часы, стальные часы и часы с камнями. ',
             'CANIS--это новый брэнд женской одежды, который был основан в 2014 году в Китае.<br>Коллекция одежды в основном состоит из платьев, леггинсов, купальных костюмов и детской одежды. Бикини представляют основную линию одежды. Мы предлагаем вам модные бикини с необычным дизайном и хорошим качеством, делающим вас еще более привлекательной и красивой.',
             'Tronsmart брэнд замотивирован так, чтобы двигаться за пределы своих возможностей в каждом аспекте. На каждом этапе нашей компании, мы работаем для достижения нашей цели "Создание в Мире  развитого интеллектуально-технического стиля жизни". Мы делаем это для репутации, для развития энтузиазма в нас, а также мы заботимся о вашем опыте и навыках, приобретенных вместе с нами. ',
             'Hongzhui брэнд был основан с целью "создания собственной китайской марки пешеходных сумок". Символ брэнда был взят из известной цитаты Гуан Я "Неуменьшенная сила навсегда". Лого символизирует совершенство, а название брэнда делает его узнаваемым из-за специальной арт формы, чтобы лого выглядело как натуральный шелк. Красный это цвет удачи в Китае, символизирующий торжество, сердечность и благородство Китая. ',
