--- a/overseas/index_sale_e.html
+++ b/overseas/index_sale_e.html
@@ -659,7 +659,7 @@
                 {
                     "name": "Sport Heart Rate Monitor Digital Watch",
                     "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_674841.html",
-                    "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
+                    "nameRussian": "Цифровые часы с монитором сердечной частоты",
                     "img": "tmp/goods2-1.jpg",
                     "price": "9.9",
                     "oldPrice": "25.00",
@@ -668,7 +668,7 @@
                 {
                     "name": "Military Electronic Men Quartz Watch",
                     "link": "http://en.jd.com/product/SKMEI-Brand-Watches-Men-Resin-Strap-Digital-Army-Military-Sport-Watch_669145.html",
-                    "nameRussian": "Армейские электронные мужские кварц часы",
+                    "nameRussian": "Электронные мужские кварц часы.",
                     "img": "tmp/goods2-2.jpg",
                     "price": "9.9",
                     "oldPrice": "22.00",
@@ -686,7 +686,7 @@
                 {
                     "name": "Analog Digital 3ATM Full Steel Quartz Watches",
                     "link": "http://en.jd.com/product/SKMEI-Luxurious-Watches-Men-Fashion-Analog-Digital-Wristwatch-3ATM-Stainless-Military-Sports-Watch_670642.html",
-                    "nameRussian": "Армейские электронные мужские кварц часы",
+                    "nameRussian": "Цифровые мужские кварц часы.",
                     "img": "tmp/goods2-4.jpg",
                     "price": "9.9",
                     "oldPrice": "30.00",
@@ -704,7 +704,7 @@
                 {
                     "name": "Waterproof Big Dial Men Quartz watch",
                     "link": "http://en.jd.com/product/SKMEI-Fashion-Black-Stainless-Full-Steel-Strap-Relogio-Male-Clock-Men-Wristwatch-Waterproof-Quartz-Sport-Watch_669107.html",
-                    "nameRussian": "Водонепроницаемые мужские кварц часы",
+                    "nameRussian": "Солнечные цифровые часы со светодиодами.",
                     "img": "tmp/goods2-6.jpg",
                     "price": "9.9",
                     "oldPrice": "20.00",
