--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -2830,10 +2830,10 @@ a {
         transition-duration: 0s;
     }
     .ani-2 .scene-2.last-animate .pad-large, .ani-2 .scene-2.last-animate .right-hand,.ani-2 .scene-2.last-animate .right-finger, .ani-2 .scene-2.last-animate .left-hand,.ani-2 .scene-2.last-animate .blue-bg{
-        -webkit-animation-name: opacity0s;
-        animation-name:opacity0s;
+        -webkit-animation-name: opacity0;
+        animation-name:opacity0;
         -webkit-animation-timing-function: linear;
-        -webkit-animation-duration: 0.2s;
+        -webkit-animation-duration: 0.3s;
         -webkit-animation-delay: 0s;
     }
     @-webkit-keyframes opacity0s{
