--- a/overseas/index_sale_e_626.html
+++ b/overseas/index_sale_e_626.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/base.js"></script>
 </head>
 
-<body data-width="1300" class="wrap-russian">
+<body data-width="1300" class="wrap-english">
 <script type="text/javascript">
     (function() {
         //判断访问终端
@@ -55,9 +55,7 @@
         }
     })()
 </script>
-<style>
-    .header-fix{z-index: 0;}
-</style>
+
 <!-- header-top start -->
 <div class="header-top" style="width:1300px">
     <div class="w">
@@ -189,14 +187,14 @@
     <div class="wrap-hd">
         <!-- S banner锚点 -->
         <div class="wrap-hd-extra">
-            <div class="map">
-                <a href="#flr1" class="item-1"></a>
-                <a href="#flr2" class="item-2"></a>
-                <a href="#flr3" class="item-3"></a>
-                <a href="#flr4" class="item-4"></a>
-                <a href="#flr5" class="item-5"></a>
-                <a href="#flr6" class="item-6"></a>
-            </div>
+                <div class="map">
+                    <a href="#flr1" class="item-1"></a>
+                    <a href="#flr2" class="item-2"></a>
+                    <a href="#flr3" class="item-3"></a>
+                    <a href="#flr4" class="item-4"></a>
+                    <a href="#flr5" class="item-5"></a>
+                    <a href="#flr6" class="item-6"></a>
+                </div>
         </div>
         <!-- E banner锚点 -->
     </div>
@@ -318,47 +316,47 @@
             <!-- S goodslist -->
             <div class="goods-list" id="goodsWrap5">
 
-                </div>
-                <!-- E goodslist -->
             </div>
-            <!-- S flr-ft -->
-            <div class="flr-ft wrap-990">
-                <a href="http://en.jd.com/search?category=&keywords=HONGZHUI&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
-            </div>
-            <!-- E flr-ft -->
-            <!-- S flr-extra -->
-            <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=HONGZHUI&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
-            <!-- E flr-extra -->
+            <!-- E goodslist -->
         </div>
-        <!-- E flr5 -->
-        <!-- S flr6 -->
-        <div class="wrap-flr flr6">
-            <a href="javascript:void(0)" class="href-map" id="flr6"></a>
-            <div class="flr-hd wrap-990">
-                <i class="icon"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-icon" target="_blank" title="more"></a></i>
-                <h2>CANIS,a new women's clothing brand, which is founded in 2014 in China. The product include women's
-                    dress, leggings, swimwear and kids' clothing. Bikini set is our main product. We will offer you beautifu
-                    bikinis with special design and good quality, makes you more charming and attracting.</h2>
-            </div>
-            <div class="flr-bd wrap-990">
-                <!-- S goodslist -->
-                <div class="goods-list" id="goodsWrap6">
-
-                </div>
-                <!-- E goodslist -->
-            </div>
-            <!-- S flr-ft -->
-            <div class="flr-ft wrap-990">
-                <a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
-            </div>
-            <!-- E flr-ft -->
-            <!-- S flr-extra -->
-            <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
-            <!-- E flr-extra -->
+        <!-- S flr-ft -->
+        <div class="flr-ft wrap-990">
+            <a href="http://en.jd.com/search?category=&keywords=HONGZHUI&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
         </div>
-        <!-- E flr6 -->
+        <!-- E flr-ft -->
+        <!-- S flr-extra -->
+        <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=HONGZHUI&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
+        <!-- E flr-extra -->
     </div>
-    <!-- E bd -->
+    <!-- E flr5 -->
+    <!-- S flr6 -->
+    <div class="wrap-flr flr6">
+        <a href="javascript:void(0)" class="href-map" id="flr6"></a>
+        <div class="flr-hd wrap-990">
+            <i class="icon"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-icon" target="_blank" title="more"></a></i>
+            <h2>CANIS,a new women's clothing brand, which is founded in 2014 in China. The product include women's
+                dress, leggings, swimwear and kids' clothing. Bikini set is our main product. We will offer you beautifu
+                bikinis with special design and good quality, makes you more charming and attracting.</h2>
+        </div>
+        <div class="flr-bd wrap-990">
+            <!-- S goodslist -->
+            <div class="goods-list" id="goodsWrap6">
+
+            </div>
+            <!-- E goodslist -->
+        </div>
+        <!-- S flr-ft -->
+        <div class="flr-ft wrap-990">
+            <a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
+        </div>
+        <!-- E flr-ft -->
+        <!-- S flr-extra -->
+        <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
+        <!-- E flr-extra -->
+    </div>
+    <!-- E flr6 -->
+</div>
+<!-- E bd -->
 
 </div>
 <!-- E 页面内容 -->
@@ -374,6 +372,7 @@
     </div>
 </div>
 <!-- E 吸顶导航 -->
+
 <!-- S 海外购底部 -->
 <div class="hyperchannel">
     <div class="w">
@@ -540,14 +539,7 @@
         },function(){
             $(this).removeClass("hover");
         });
-        var wh = $(window).height();
-        $(window).scroll(function() {
-            if ($(window).scrollTop() > wh) {
-                $(".header").addClass("header-fix");
-            } else {
-                $(".header").removeClass("header-fix");
-            }
-        });
+
         //back to top
         var oTop = $("#top");
         $(window).scroll(function(){
@@ -572,10 +564,10 @@
         <% var sdata = sections[i] %>
         <li>
             <div class="goods-img">
-                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="<%= sdata.img %>" alt="<%= sdata.nameRussian %>"/></a>
+                <a href="<%= sdata.link %>" target="_blank" class="href-goods-img"><img src="<%= sdata.img %>" alt="<%= sdata.name %>"/></a>
             </div>
             <div class="goods-info">
-                <a href="<%= sdata.link %>" target="_blank" class="href-goods-name"><%= sdata.nameRussian %></a>
+                <a href="<%= sdata.link %>" target="_blank" class="href-goods-name"><%= sdata.name %></a>
                 <div class="goods-price">
                     <em>$<%= sdata.price %></em><span class="price-old">$<%= sdata.oldPrice %></span>
                 </div>
@@ -986,40 +978,37 @@
     var tmpId = ['goodsWrap1','goodsWrap2','goodsWrap3','goodsWrap4','goodsWrap5','goodsWrap6'];
     $(tmpId).each(function(_index,_k){
 
-        var tt = $('#'+_k);
-        if(tt!='undefined'){
-            mcHtml = template.render('goodTpl', {'data' : goodsData[_index],'pId': _index+1 ,'id' : _index+1});
-            $('#' + _k).html(mcHtml);
-        }
+            var tt = $('#'+_k);
+            if(tt!='undefined'){
+                mcHtml = template.render('goodTpl', {'data' : goodsData[_index],'pId': _index+1 ,'id' : _index+1});
+                $('#' + _k).html(mcHtml);
+            }
 
     });
 
     /*var goodsHtml = template.render('goodTpl', {'data' : goodsInfo[0]});
-     $('#goodWrap1').html(goodsHtml);
-     $('#goodWrap2').html(template.render('goodTpl', {'data' : goodsInfo[1]}));*/
+    $('#goodWrap1').html(goodsHtml);
+    $('#goodWrap2').html(template.render('goodTpl', {'data' : goodsInfo[1]}));*/
 </script>
 <!-- added by lillian-->
 <script>
     $(function(){
-
         var hdTitle = [
-            'Yumi-Наш бизнес был начат более чем 18 лет назад, основатели которого Uttam and Clare Nepal. В 1994 году они начали продавать трикотажные изделия из Непала в Лондон. В то модное время, этническая и ручная работа их коллекции сделала их очень популярными до конца 90х и брэнд быстро развивался. Компания заслужила себе репутацию благодаря живым краскам, принтам и акценту на мелкие детали, что быстро сделало ее узнаваемым во всем Мире как брэнд женской, детской одежды и аксессуаров.',
-            'SKME--живи лучшей жизнью.<br>С 7 августа 2010 года, SKMEI основной акцент поставил на спорт и креативность в часах.SKMEI непрерывно развивает новую технологию и переносит все ее достижения на дизайн уникальных часов. Наша цель это создание яркого образа красивых часов в сочетание с лучшим опытом и инновационными характеристиками. SKMEI включает  4 вида часов: модные часы, силиконовые часы, стальные часы и часы с камнями. ',
-            'CANIS--это новый брэнд женской одежды, который был основан в 2014 году в Китае.<br>Коллекция одежды в основном состоит из платьев, леггинсов, купальных костюмов и детской одежды. Бикини представляют основную линию одежды. Мы предлагаем вам модные бикини с необычным дизайном и хорошим качеством, делающим вас еще более привлекательной и красивой.',
-            'Tronsmart брэнд замотивирован так, чтобы двигаться за пределы своих возможностей в каждом аспекте. На каждом этапе нашей компании, мы работаем для достижения нашей цели "Создание в Мире  развитого интеллектуально-технического стиля жизни". Мы делаем это для репутации, для развития энтузиазма в нас, а также мы заботимся о вашем опыте и навыках, приобретенных вместе с нами. ',
-            'Hongzhui брэнд был основан с целью "создания собственной китайской марки пешеходных сумок". Символ брэнда был взят из известной цитаты Гуан Я "Неуменьшенная сила навсегда". Лого символизирует совершенство, а название брэнда делает его узнаваемым из-за специальной арт формы, чтобы лого выглядело как натуральный шелк. Красный это цвет удачи в Китае, символизирующий торжество, сердечность и благородство Китая. ',
-            'LUMINTOP брэнд за последние 6 лет придерживается идеи внедрения технических новшеств и производства доступных по цене фонарей. LUMINTOP надежный! Развлекательный! Качественные, практичные и износостойкие фонари.'
-        ]
+            "Yumi was started over 18 years ago by its founders Uttam and Clare in Nepal.In 1994 Uttam and Clare began selling knitwear from Uttam's home country of Nepal in Camden Market, London. The company acquired a reputation for its vibrant colours, quirky prints attention to detail and quickly became globally recognised for its eye-catching womenswear, childrenswear and accessories." ,
+            "SKMEI--Live life better.<br>Since August 7, 2010,  SKMEI has focused on placing sport and creativity in a watch.SKMEI is constantly developing new technology and putting it into the design of a classic and unique watch. Our aim is to create more vivid images, beautiful watches, a better experience, and more technological capabilities.",
+            "CANIS--a new women's clothing brand, which was founded in 2014 in China.<br>Their clothing includes women's dresses, leggings, swimwear and kids' clothing. Our Bikini line is our main product. We offer you beautifu bikinis with special design and good quality, making you more charming and attractive.",
+            "Tronsmart-We stay motivated to push ourselves beyond our limits in every aspect. In every phase of our company we work to accomplish our goal of “Creating the world’s most intelligent electronic lifestyle”. We are not doing this for fame, we do this for the passion inside all of us and because we care for your experience.",
+            "Hongzhui -Hongzhui was founded with the purpose to 'build China's own brand of luggage.' The symbol of the brand was taken from a famous quote by Guang Ya saying 'undiminished vigor forever'. The Logo is a symbol of perfection and the brand name is recognizable from a special artform to make the logo look like fine silk. Red is the color of good luck in China, symbolizing the festivity, warmth, and generosity of China.",
+        "LUMINTOP has committed to innovate and manufacture personalized and cost-effective flashlights for the past 6 years. From tactical and outdoor flashlights, to dive lights, and headlamps, LUMINTOP has got you covered."];
         var lastTop = $(document).scrollTop();
         var floatTop = $('.float-top').height();
-        var floatShowHeight = $('.wrap-bd').offset().top;
+        var floatShowHeight = $('.wrap-bd').offset().top-floatTop;
         var floatDom = $('.float-top');
         var floatShowFlag = false;
         var floatHideFlag = false;
         var saleContent = $('.wrap-flr');
         var saleCtTop = [];
         var saleCtHeight = [];
-        var headerHeight = $('.header').outerHeight()?parseInt($('.header').outerHeight()) : 110;
         $(saleContent).each(function(i,k){
             saleCtTop.push($(k).offset().top-floatTop+3);
             saleCtHeight.push($(k).height());
@@ -1050,7 +1039,6 @@
                     floatShowFlag = false;
                 },400)
             }
-
         }
         else{
             if(!floatHideFlag) {
@@ -1088,18 +1076,11 @@
         })
         $(window).scroll(function(e){
             var nowTop = $(document).scrollTop();
-            var screenHeight = $(window).height();
             floatShowHeight = $('.wrap-bd').offset().top-floatTop;
             saleCtTop = [];
             $(saleContent).each(function(i,k){
                     saleCtTop.push($(k).offset().top-floatTop+3)
             })
-            if (nowTop > screenHeight){
-                $('.wrapper').css('padding-top',headerHeight);
-            }
-            else{
-                $('.wrapper').css('padding-top',0);
-            }
             //showFloat(nowTop);
             if ( nowTop >= floatShowHeight ){
                 if(!floatShowFlag) {
